Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96943

Incorrect video orientation for recorded video - recorder example

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 6.2.1, 6.3.0 Alpha
    • 6.2
    • Multimedia
    • None
    • Android
    • 9263cca59a4952bb95c94d433b05c77cdcbb3e8e (qt/qtmultimedia/dev) cb9b47313e6ba1e083aa34bc3d90b6d4c4b13b3a (qt/qtmultimedia/6.2)

    Description

      Steps to reproduce:
      1. Run recorder example on Android device
      2. Record and replay video

      Actual:
      Incorrect video position
      Expected:
      Video position should be identical as during recording

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-96943
          # Subject Branch Project Status CR V

          Activity

            People

              samuelmira Samuel Mira
              mateusz_sobal Mateusz Sobal
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes