Fix incorrect video orientation for front camera

The current camera rotation on camera session is compensating the front
camera image for preview, but it seems the android is also compensating
when recording. So final video became flipped again.

Fixes: QTBUG-96943
Pick-to: 6.2
Change-Id: I0d08de15bab41926136c2a4b96154b9e2b5f5bb8
Reviewed-by: Lars Knoll <lars.knoll@qt.io>